--- a/app/views/kpis/access.html.erb
+++ b/app/views/kpis/access.html.erb
@@ -18,11 +18,30 @@
           <div id="kpi-item-container">
             <%= render partial: 'access' %>
           </div>
+          <div class="kpi-library" id="subscribe-kpi-block" type="attribute">
+            <div>
+              <i class="icon icon-remove" id="edit-attribute-block-remove"></i>
+
+              <div class="attribute-block" type="edit">
+                <ul id="kpi-properties">
+                  <li><label>某个属性</label><i class="icon icon-trash"></i></li>
+                  <li><label>某个属性</label><i class="icon icon-trash"></i></li>
+                </ul>
+              </div>
+
+              <div class="add-attribute">
+                <input id="add-kpi-property" placeholder="<%= t 'manage.kpi.dimensions-inputname'%>"/>
+                <a class="btn btn-normal btn-success" id="edit-attribute-block-add"><%= t 'manage.kpi.dimensions-add'%></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
 <script type="text/javascript">
     $(document).ready(function () {
         MANAGE.kpi.init();
