--- a/app/views/stories/_create.html.erb
+++ b/app/views/stories/_create.html.erb
@@ -84,7 +84,7 @@
           </div>
           <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px;margin-left:0px" id="db-add-chart">Add</a>
         </div>
-        <i class="icon-chevron-down analytic-control-condition-visible" id="analytic-control-condition-visible" state="open"> </i>
+        <i class="icon-chevron-down analytic-control-condition-visible" id="analytic-control-condition-visible" state="close"> </i>
       </div>
       <div class="db-chart-body" id="db-chart-body">
         <div class="clearfix" id="db-chart-interval-alternate" my_height="28">
