--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -45,6 +45,9 @@
       <li>
         <a href="<%= story_sets_path %>" guide-name="analyze_menu"> <span>我的讨论组</span> </a>
       </li>
+      <li>
+        <a href="<%=kpi_subscribes_path %>" guide-name="analyze_menu"> <span>我的订阅</span> </a>
+      </li>
       <li><a>
         <span>&nbsp;</span>
       </a></li>
