--- a/app/views/story_sets/index.html.erb
+++ b/app/views/story_sets/index.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="projects">
           <% @story_sets.each do |story_set| %>
-            <a class="item" href="<%= story_set_path(story_set) %>">
+            <a class="item" href="<%= story_story_set_path(story_set) %>">
               <div class="left">
                 <p title="<%= story_set.title %>"><%= story_set.title %></p>
                 <p title="<%= story_set.description %>"><%= story_set.description %></p>
@@ -18,7 +18,6 @@
               <div class="right"></div>
             </a>
           <% end %>
-
         </div>
       </div>
   </div>
@@ -31,46 +30,4 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-<h1>Listing Story Sets</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Collaborators</th>
-  </tr>
-
-  <% @story_sets.each do |story_set| %>
-      <tr>
-        <td><%= story_set.title %></td>
-        <td><%= story_set.description %></td>
-        <td>
-          <ul>
-            <% story_set.collaborators.each do |c| %>
-                <li><%= c.first_name %></li>
-            <% end %>
-          </ul>
-        </td>
-        <td><%= link_to 'Show', story_set %></td>
-        <td><%= link_to 'Edit', edit_story_set_path(story_set) %></td>
-        <td><%= link_to 'Destroy', story_set, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-      </tr>
-  <% end %>
-</table>
-
-<br/>
-
-<%= link_to 'New Story set', new_story_set_path %>
-
-<%= render partial: 'users/redis_select' %>
 
