--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -49,7 +49,7 @@
         <a href="<%= story_sets_path %>" guide-name="analyze_menu"> <span>我的讨论组</span> </a>
       </li>
       <li>
-        <a href="<%=kpi_subscribes_path %>" guide-name="analyze_menu"> <span>我的订阅</span> </a>
+        <a href="<%=mine_kpi_subscribes_path %>" guide-name="analyze_menu"> <span>我的订阅</span> </a>
       </li>
       <li><a>
         <span>&nbsp;</span>
