--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -5,10 +5,22 @@
           <tr>
             <td title='<%= kpi.name %>'><%= kpi.name %></td>
             <td><%= kpi.id %></td>
+            <td>
+              <p>
+              <% kpi.kpi_subscribes.each do |ks| %>
+                  <span><%= ks.kpi_id %></span>
+              <% end %>
+              </p>
+            </td>
+            <td>
+              <a class="btn btn-success">添加订阅</a>
+            </td>
           </tr>
           <tr>
             <td title='<%= kpi.description %>'><%= kpi.description %></td>
             <td>KPI ID</td>
+            <td>订阅</td>
+            <td>操作</td>
           </tr>
         </table>
       </li>
