--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -8,7 +8,7 @@
             <td>
               <p>
               <% kpi.kpi_subscribes.each do |ks| %>
-                  <span><%= ks.kpi_id %></span>
+                  <span><%= ks.description %></span>
               <% end %>
               </p>
             </td>
