--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,19 +31,37 @@
 <script type="text/javascript">
     I18n.defaultLocale = "<%= I18n.default_locale %>";
     I18n.locale = "<%= I18n.locale %>";
-//    $.ajaxSetup({
-//        statusCode: {
-//            403: function () {
-//                location.href='/403';
-//            },
-//            404: function () {
-//                location.href='/404';
-//            },
-//            500:function(){
-//                location.href='/500';
-//            }
-//        }
-//    });
+    //    $.ajaxSetup({
+    //        statusCode: {
+    //            403: function () {
+    //                location.href='/403';
+    //            },
+    //            404: function () {
+    //                location.href='/404';
+    //            },
+    //            500:function(){
+    //                location.href='/500';
+    //            }
+    //        }
+    //    });
+    (function callmessage() {
+        setTimeout(function () {
+            $.ajax({
+                url: '/users/message',
+                dataType: 'html',
+                type: 'get',
+                success: function (data) {
+                    $('#user-message-div').popModal({
+                        html: data
+                    });
+                    callmessage();
+                },
+                error: function () {
+                    callmessage();
+                }
+            });
+        }, 3000);
+    })();
 </script>
 <%= yield :javascript_includes %>
 </html>
