--- a/app/views/kpi_subscribes/new.html.erb
+++ b/app/views/kpi_subscribes/new.html.erb
@@ -1,5 +1,5 @@
 <div class="story-set-new">
-  <p>新建KPI订阅</p>
+  <p><%= t 'subscription.add'%></p>
   <div class="divide"></div>
   <div class="form">
     <input style="margin: 5px" type="text" value="<%= @kpi.name %>" id="kpi-id" kpi-id="<%=@kpi.id%>" disabled />
