--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -46,10 +46,10 @@
         <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
       </li>
       <li>
-        <a href="<%= story_sets_path %>" guide-name="analyze_menu"> <span>我的讨论组</span> </a>
+        <a href="<%= story_sets_path %>" guide-name="analyze_menu"> <span><%= t 'menu.story_set' %></span> </a>
       </li>
       <li>
-        <a href="<%=mine_kpi_subscribes_path %>" guide-name="analyze_menu"> <span>我的订阅</span> </a>
+        <a href="<%=mine_kpi_subscribes_path %>" guide-name="analyze_menu"> <span><%= t 'menu.subscription' %></span> </a>
       </li>
       <li><a>
         <span>&nbsp;</span>
