--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -44,3 +44,42 @@ header{
 
   }
 }
+//上传文件
+.abstractblock{
+  width:60%;
+ .attachment-item{
+   display:table;
+   width:100%;
+   font-size:12px;
+   &:hover .attachment-item-remove{
+     display:block;
+   }
+   &:after{
+     @include after-clear;
+   }
+   .content,.remove{
+     vertical-align: left;
+     vertical-align:middle;
+     display:table-cell;
+   }
+   .content{
+       @include word-break;
+     p{
+       margin:2px 0 2px
+     }
+   }
+   .remove{
+     width:70px;
+     padding-top:5px;
+     padding-left:8px;
+   }
+   .attachment-item-remove{
+     pointer-events:auto;
+     display:none;
+     &:hover{
+       color:$red;
+       display:block;
+     }
+   }
+ }
+}
