--- a/app/views/stories/_chart.html.erb
+++ b/app/views/stories/_chart.html.erb
@@ -21,11 +21,12 @@
   </div>
 </div>
 <script>
+
     $(document).ready(function () {
         for (var i = 0; i < $('.chart-conditions').children().length; i++)
             prepare_form_cchart(i);
     });
-
+    function prepare_form_cchart(i) {
         var data = jQuery.parseJSON($("#data-hidden-"+i).val());
         var kpi = $("#kpi-id-hidden-"+i).val();
         var kpi_name = $("#kpi-name-hidden-"+i).val();
@@ -61,6 +62,7 @@
                 view_text: view_text,
                 chart_body_close_validate: chart_body_close_validate
             };
+
             ANALYTICS.chartSeries.addCount();
             ANALYTICS.chartSeries.id_give();
             option.id = ANALYTICS.chartSeries.id;
