--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="btn-area">
-        <a class="btn btn-success" id="add-dashboard-show">publish</a>
+        <a class="btn btn-success" href="/kpi_entries/analyse">publish</a>
       </div>
     </div>
     <div class="participate">
@@ -52,7 +52,9 @@
 
 </div>
 <% content_for :javascript_includes do %>
-    <%= javascript_include_tag "highcharts.js" %>
+    <%= javascript_include_tag "highstock.js" %>
+    <%= javascript_include_tag "high_chart_template_analytic.js"%>
+    <%= javascript_include_tag "Analytics_init.js"%>
     <%= javascript_include_tag 'magnific.popup/jquery.magnific-popup.min' %>
 <% end %>
 
