--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
 
 
+<%= render :partial => 'shares/user_message' %>
 <%= render :partial => 'shares/user_guide_env' %>
 <article class="wrap-main" id="wrap-main">
   <%= render :partial => 'shares/menu' %>
@@ -44,20 +45,54 @@
     //            }
     //        }
     //    });
+    var old_message = null;
     (function callmessage() {
         setTimeout(function () {
             $.ajax({
                 url: '/users/message',
-                dataType: 'html',
+                dataType: 'json',
                 type: 'get',
                 success: function (data) {
-                    $('#user-message-div').popModal({
-                        html: data
-                    });
+                    if (old_message != JSON.stringify(data) || $('#user-message-control').val() == 'false') {
+                        $('#user-message-ul').children().remove();
+                        $.each(data, function (i, v) {
+                            if (v.count != 0) {
+                                $('#user-message-ul').append(
+                                        $("<li/>").append(
+                                                $("<a/>").attr('href', v.link).append($("<span/>").text(v.content))
+                                                        .append($("<span/>").text(v.count))
+                                        )
+                                );
+                            }
+                        });
+                        if ($('#user-message-ul').children().length > 0)
+                            $('#user-message-div').popModal({
+                                html: $('#user-messgae-div'),
+                                duration: 5000,
+                                onDocumentClickClose: false,
+                                onLoad: function () {
+                                    $('#user-messgae-div').show();
+                                    $('#user-message-control').val("true");
+                                },
+                                onClose: function () {
+                                    $('#user-messgae-div').hide();
+                                    $('#user-message-control').val("false");
+                                }
+                            });
+                        else {
+                            if ($('#user-message-control').val() == 'true')
+                                $('#user-message-div').popModal("hide");
+                        }
+                        old_message = JSON.stringify(data);
+                    }
                     callmessage();
                 },
                 error: function () {
+                    console.log('e');
                     callmessage();
+                },
+                complete: function (xhr) {
+                    if (xhr.status == 304) return;
                 }
             });
         }, 3000);
