--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -88,7 +88,10 @@
         </li>
       </ul>
       <!------------------------------------------------   创建讨论版的按钮  -------------------------------------->
-      <a class="btn btn-warning linear compare-current-btn" id="create-discuss-btn">创建讨论</a>
+      <% if @setting == 'analyse' %>
+          <a class="btn btn-warning linear compare-current-btn" id="create-discuss-btn">创建讨论</a>
+      <% end %>
+
     </div>
 
 
