--- a/app/views/kpi_subscribes/mine.html.erb
+++ b/app/views/kpi_subscribes/mine.html.erb
@@ -14,7 +14,7 @@
           <i class="icon-pencil"></i>
           <input type="text"/>
         </div>
-        <div class="manage-right-list">
+        <div class="manage-right-list kpi-subscribes">
           <div id="kpi-item-container">
             <%= render :partial => 'subscribes'%>
           </div>
