--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -126,14 +126,14 @@
     <div class="project-block" id="project-block" my_height="210">
       <div class="inner">
         <div class="left">
-          <p>Project title</p>
-          <input type="text" id="project-title"/>
-          <p>Project description</p>
-          <textarea id="project-desc"></textarea>
+          <p>标题</p>
+          <input type="text" id="story-title"/>
+          <p>内容</p>
+          <textarea id="story-desc"></textarea>
         </div>
         <div class="right">
           <div>
-            <p>Attachment</p>
+            <p>附件</p>
             <input id="item-data-uploader" type="file" name="files[]" multiple="true" data-url="/files/upload">
             <div class="abstractblock" id="item-data-uploader-preview" style="display:none;"></div>
           </div>
@@ -258,18 +258,19 @@
        <p>选择讨论组</p>
          <div class="choose-by-select">
            <p>加入已有讨论组</p>
-           <select data-placeholder="选择讨论组" class="chosen-select" >
-             <option>1</option>
-             <option>2</option>
+           <select data-placeholder="选择讨论组" class="chosen-select" id="story-sets">
+             <% current_user.collaborated_story_sets.all.each do |set|%>
+                 <option value="<%= set.id %>"><%= set.title%></option>
+             <%end%>
            </select>
-           <a class="btn btn-primary">加入</a>
+           <a class="btn btn-primary" id="add-to-storyset">加入</a>
          </div>
          <div class="choose-by-create">
            <p>创建新的讨论组</p>
            <input type="text" id="storyset-title" placeholder="讨论组名称"/>
            <input type="text" id="storyset-desc" placeholder="讨论组描述"/>
            <select multiple class="chosen-select" data-placeholder="选择成员" id="storyset-users">
-                <option>asd</option>
+             <option>asd</option>
            </select>
            <a class="btn btn-primary">创建并加入</a>
          </div>
@@ -290,6 +291,8 @@
     <%= javascript_include_tag "date_picker_template.js" %>
     <%= javascript_include_tag "bootstrap-datetimepicker.min.js" %>
     <%= javascript_include_tag "jquery.ui/jquery-ui-wayne.min.js" %>
+    <%= javascript_include_tag "chart-util.js" %>
+    <%= javascript_include_tag "Manage-story.js" %>
 
 
     <%= javascript_include_tag "jquery.ui/jquery-ui-1.10.3.custom.min.js" %>
@@ -323,6 +326,34 @@
                 })
                 .on("click","#remove-back-pop",function(){
                     $("#back-pop").removeClass("show")
+                })
+                .on("click","#add-to-storyset",function(){
+                    var story = {title: $("#story-title").val(), description:$("#story-desc").val(),story_set_id: $("#story-sets option:selected").attr("value")};
+                    var attachments = MANAGE.story.get_attachments('item-data-uploader-preview');
+                    var chart_conditions = [];
+
+                    for(var i=0;i<ANALYTICS.chartSeries.series.length;i++){
+                        var condition = {};
+                        condition.entity_group_id = ANALYTICS.chartSeries.series[i].view;
+                        condition.kpi_id = ANALYTICS.chartSeries.series[i].kpi_id;
+                        condition.calculate_type = CHARTUTIL.calculate_type($("#chart-type-alternate .image").attr("type"));
+                        condition.time_string = CHARTUTIL.time.time_string(ANALYTICS.chartSeries.series[i].begin_time,ANALYTICS.chartSeries.series[i].end_time);
+                        condition.interval = $("#chart-interval-alternate .active").attr("interval");
+                        condition.chart_type = ANALYTICS.chartSeries.series[i].type;
+                        chart_conditions.push(condition);
+                    }
+
+                    if (chart_conditions.length > 0){
+                        story.chart_conditions = chart_conditions;
+                    }
+
+                    if(attachments){
+                        story.attachments = attachments;
+                    }
+                    //console.log(story);
+
+                    MANAGE.story.create(story,function(data){
+                    });
                 })
     });
     $(window).resize(function () {
